# fforma

./: README.rst  pyproject.toml  run.py
docs/: api.rst  conf.py
fforma/: base_models_r.py  fforma.py  meta_learner.py  meta_model.py
