[tool.poetry]
name = "fforma"
version = "0.1.0"
description = ""
authors = ["Noah Sayre <nsayre@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
tsfeatures = {git = "https://github.com/FedericoGarza/tsfeatures"}
ESRNN = "^0.1.3"
rpy2 = "^3.4.4"
numpy = "^1.20.3"
dask = "^2021.5.0"
lightgbm = "^3.2.1"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
recommonmark = "^0.7.1"
isort = "^5.8.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
